@@ -32,7 +32,8 @@
       environment variable \env{R_C_BOUNDS_CHECK} to \samp{yes}), raw,
       integer, double and complex arguments are always copied, and
       checked for writing off either end of the array on return from the
-      compiled code.
+      compiled code.  This also checks individual elements of character
+      vectors passed to \code{.C()}.
 
       This is not intended for routine use, but can be very helpful in
       finding segfaults in package code.
